# matmod

./: .gitignore  CMakeLists.txt  readme.md  requirements.txt
lab1/: lab1.py
labs/: CMakeLists.txt
labs/lr1/: CMakeLists.txt  consts.h  consts.py  main.cpp  main.py  part.py
labs/lr1/report/: Халитова лр1.aux  Халитова лр1.out  Халитова лр1.tex  Халитова лр1.toc
labs/lr1/src/: CMakeLists.txt  main.cpp  main.py  part.py  solver.cpp  solver.h  spacecraft_solver.cpp  spacecraft_solver.h  state.cpp  state.h
labs/lr2/report/: Халитова лр2.tex
labs/lr2/src/: CMakeLists.txt  main.cpp  main.py
labs/lr3/report/: Халитова лр3.tex
labs/lr3/src/: CMakeLists.txt  main.cpp  main.py
labs/lr4/report/: Халитова лр4.tex
labs/lr4/src/: CMakeLists.txt  main.cpp  main.py
labs/lr5/report/: Халитова лр5.tex
labs/lr5/src/: CMakeLists.txt  base.cpp  base.h  consts.h  grid.cpp  grid.h  light.cpp  light.h  live.cpp  live.h  main.cpp  neural.cpp  neural.h  organism.cpp  organism.h  pattern.cpp  pattern.h
